Minor formatting changes

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-See the LICENSE file for all of the glory of the New BSD license.
+See the LICENSE file for all of the glory of the New BSD License.
 
 Main Contributors:
-Jon Wilsdon <fatjonny>
+fatjonny <Jon Wilsdon>
 
 Development Sponsored By:
 Bouncing Pixel <http://www.bouncingpixel.com/>
