Update README with new contributor

--- a/README
+++ b/README
@@ -2,6 +2,7 @@ See the LICENSE file for all of the glory of the New BSD License.
 
 Main Contributors:
 fatjonny <Jon Wilsdon>
+meganbednarz <Megan Bednarz>
 
 Development Sponsored By:
 Bouncing Pixel <http://www.bouncingpixel.com/>
